5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1800_2565.log
== TEST (2019-06-06 10:39:47) 
-- CODE:
from numpy import *
mf = array(eval(input()))
pr = array(eval(input()))
ch = float(input())
a = rf = rn = x = 0
for x in range (0,len(mf)):
	if mf[i]<5:
		rn+=1
	elif f/pr[x]<0.75:
		rf+=1
	else:
		a+=1
g = array([a,rn,rf])
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:40:35) 
-- CODE:
from numpy import *
mf = array(eval(input()))
pr = array(eval(input()))
ch = float(input())
a = rf = rn = x = 0
for x in range (0,len(mf)):
	if mf[i]<5:
		rn+=1
	elif f/pr[x]<0.75:
		rf+=1
	else:
		a+=1
g = array([a,rn,rf])
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:40:54) 
-- CODE:
from numpy import *
mf = array(eval(input()))
pr = array(eval(input()))
ch = float(input())
a = rf = rn = x =  0
for x in range (0,len(mf)):
	if mf[x]<5:
		rn+=1
	elif f/pr[x]<0.75:
		rf+=1
	else:
		a+=1
g = array([a,rn,rf])
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:41:12) 
-- CODE:
from numpy import *
mf = array(eval(input()))
pr = array(eval(input()))
ch = float(input())
a = rf = rn = x =  0
for x in range (0,len(mf)):
	if mf[x]<5:
		rn+=1
	elif ch/pr[x]<0.75:
		rf+=1
	else:
		a+=1
g = array([a,rn,rf])
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:41:56) 
-- CODE:
from numpy import *
mf = array(eval(input()))
pr = array(eval(input()))
ch = float(input())
a = rf = rn = x =  0
for x in range (0,len(mf)):
	if mf[x]<5:
		rn+=1
	elif ch/pr[x]<0.75:
		rf+=1
		prin(ch/pr[x])
	else:
		a+=1
g = array([a,rn,rf])
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:42:06) 
-- CODE:
from numpy import *
mf = array(eval(input()))
pr = array(eval(input()))
ch = float(input())
a = rf = rn = x =  0
for x in range (0,len(mf)):
	if mf[x]<5:
		rn+=1
	elif ch/pr[x]<0.75:
		rf+=1
	prin(ch/pr[x])
	else:
		a+=1
g = array([a,rn,rf])
print(g)
-- ERROR:
File "XXXX", line 12
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:42:18) 
-- CODE:
from numpy import *
mf = array(eval(input()))
pr = array(eval(input()))
ch = float(input())
a = rf = rn = x =  0
for x in range (0,len(mf)):
	if mf[x]<5:
		rn+=1
	elif ch/pr[x]<0.75:
		rf+=1
		
	else:
		a+=1
	prin(ch/pr[x])
g = array([a,rn,rf])
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:42:25) 
-- CODE:
from numpy import *
mf = array(eval(input()))
pr = array(eval(input()))
ch = float(input())
a = rf = rn = x =  0
for x in range (0,len(mf)):
	if mf[x]<5:
		rn+=1
	elif ch/pr[x]<0.75:
		rf+=1
		
	else:
		a+=1
	print(ch/pr[x])
g = array([a,rn,rf])
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:42:45) 
-- CODE:
from numpy import *
mf = array(eval(input()))
pr = array(eval(input()))
ch = float(input())
a = rf = rn = x =  0
for x in range (0,len(mf)):
	if mf[x]<5:
		rn+=1
	elif pr[x]/ch<0.75:
		rf+=1
		
	else:
		a+=1
	print(ch/pr[x])
g = array([a,rn,rf])
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:43:06) 
-- CODE:
from numpy import *
mf = array(eval(input()))
pr = array(eval(input()))
ch = float(input())
a = rf = rn = x =  0
for x in range (0,len(mf)):
	if mf[x]<5:
		rn+=1
	elif pr[x]/ch<0.75:
		rf+=1
	else:
		a+=1
g = array([a,rn,rf])
print(g)
-- EXECUTION TIME:
1.10825
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
